GO-T228 fixed file name word-wrap

--- a/src/components/fs-file-preview/fs-file-preview.component.scss
+++ b/src/components/fs-file-preview/fs-file-preview.component.scss
@@ -70,6 +70,7 @@
   &:hover .file-name {
     overflow: visible;
     white-space: normal;
+    word-wrap: break-word;
   }
 
   &.preview {
